# UniversalKey

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  index.md  log.md  package.json  setup.sh
.github/workflows/: lint.yml
.obsidian/: app.json  community-plugins.json  core-plugins.json
00 - Inbox/: README.md
10 - Projects/: README.md
20 - Areas/: README.md
30 - Resources/: README.md
40 - Archive/: README.md
Templates/: Book Note.md  Conversation Import.md  Daily Note.md  Entity Note.md  README.md  Training Data Entry.md
_archives/: README.md
_meta/: README.md  confidence.md  consolidation.md  contradictions.md  draft-readme.md  lifecycle.md  mega-mind-manifest.md  portability.md  taxonomy-core.md  taxonomy.md
_meta/domain-packs/: README.md  _template.md  chiropractic.md
_raw/: README.md
concepts/: README.md
entities/: README.md
entities/organizations/: README.md
entities/people/: README.md
entities/things/: README.md
journal/: README.md
references/: README.md
skills/: README.md
synthesis/: README.md
tools/: README.md  anonymize.mjs  concept-coverage-report.mjs  convert-pdf.bat  convert-pdf.sh  cross-linker-batch.mjs  domain-pack-init.mjs  extract-from-source.mjs  frontmatter-migrate.mjs  graph-export.mjs  ingest-folder.mjs  progress-report.mjs  tag-and-frontmatter.mjs  wiki-lint-v2.mjs
tools/analyzer/: README.md  pyproject.toml
tools/analyzer/src/universalkey_analyzer/: __init__.py  cli.py  frontmatter_edges.py  load.py  metrics.py  report.py
tools/analyzer/tests/: test_analyzer.py  test_frontmatter_edges.py  test_load.py  test_metrics.py  test_report.py
tools/lib/: classify-folder.mjs  detect-language.mjs  enumerate-files.mjs  frontmatter-v2.mjs  manifest.mjs  paths.mjs  wikilink-index.mjs
tools/pdfmd/: LICENSE  README.md  pyproject.toml  requirements.txt
tools/pdfmd/doc/: API.md
tools/pdfmd/pdfmd/: __init__.py  app_gui.py  cli.py  equations.py  extract.py  models.py  pipeline.py  render.py  tables.py  transform.py  utils.py
